# IntentShell

./: .gitignore  README.md  pyproject.toml
docs/: demo-commands.md  demo-script.md  demo-voiceover.md  devpost-draft.md  submission-assets.md  support-matrix.md
fixtures/: README.md
fixtures/demo_repo/: README.md
fixtures/demo_repo/coverage/: index.html
fixtures/demo_repo/src/: main.py
src/intentshell/: __init__.py  cli.py  core.py  storage.py
tests/: test_core.py
