[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "intentshell"
version = "0.1.0"
description = "Before destructive commands run, verify they match intent."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "IntentShell"}]
license = {text = "MIT"}
dependencies = []

[project.scripts]
intentshell = "intentshell.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
